--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   max-width: max-content;
   grid-area: sidebar;
-  overflow-y: auto;
+  // overflow-y: auto;
   @apply common-card flex flex-col;
   padding: 0;
 
@@ -27,6 +27,8 @@
       &-text {
         font-size: 1.4rem
       }
+
+     
     }
 
   }
@@ -44,13 +46,13 @@
       transition: all 0.2s linear;
 
       &.menu-active {
-        background-color: rgb(43, 20, 77);
+        background-color: #2b144d;
         color: white;
 
       }
 
       &:not(.menu-active):hover {
-        background-color: rgba(160, 109, 255, 0.4);
+        background-color: #a06dff6f;
       }
 
       &-text {
@@ -104,6 +106,7 @@
     justify-content: center;
     border-bottom: 1px solid gray;
     padding: 1rem;
+    position: relative;
 
     &-img {}
 
@@ -112,5 +115,14 @@
       color: #2b144d;
       font-weight: 500;
     }
+    .menu{
+      position: absolute;
+      right: -15px;
+      top:3rem;
+      aspect-ratio: 1/1;
+      padding: 2px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 3px 3px 27px #00000926;    }
   }
 }
