--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,6 @@
-@import "mixins/_mixin-dir";
-@import "helper/_helper-dir";
-@import "base/_base-dir";
-@import "layout/_layout-dir";
-@import "common/_common-dir";
-@import "component/_component-dir";
+@use "mixins/_mixin-dir";
+@use "helper/_helper-dir";
+@use "base/_base-dir";
+@use "layout/_layout-dir";
+@use "common/_common-dir";
+@use "component/_component-dir";
